<resources>
    <string name="app_name">Tema3_Ejer2</string>
    <string name="cont">Contador</string>
    <string name="color">Cambiar Color</string>
    <string name="decrementar">Decrementar</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="sinSeleccionar">Sin Seleccionar</string>
    <string name="seleccionado">Selccionado</string>
    <string name="nuevo">Nuevo</string>
    <string name="borrar">Borrar</string>
    <string name="editar">Editar</string>
</resources>
